4 September 2008: Wouter
	- scrubber scrubs away private addresses.
	- test for private addresses. man page entry.

3 September 2008: Wouter
	- options for 'DNS Rebinding' protection: private-address and
	  private-domain.
	- dnstree for reuse of routines that help with domain, addr lookups.
	- private-address and private-domain config option read, stored.

2 September 2008: Wouter
	- DoS protection features. Queries are jostled out to make room.
	- testbound can pass time, increasing the internal timer.
	- do not mark unsigned additionals bogus, leave unchecked, which
	  is removed too.

1 September 2008: Wouter
	- disallow nonrecursive queries for cache snooping by default.
	  You can allow is using access-control: <subnet> allow_snoop.
	  The defaults do allow access no authoritative data without RD bit.
	- two tests for it and fixups of tests for nonrec refused.

29 August 2008: Wouter
	- version 1.1 number in trunk.
	- harden-referral-path option for query for NS records.
	  Default turns off expensive, experimental option.

28 August 2008: Wouter
	- fixup logfile handling; it is created with correct permissions
	  again. (from bugfix#199).
	  Some errors are not written to logfile (pidfile writing, forking),
	  and these are only visible by using the -d commandline flag.

27 August 2008: Wouter
	- daemon(3) is causing problems for people. Reverting the patch.
	  bug#200, and 199 and 203 contain sideline discussion on it.
	- bug#199 fixed: pidfile can be outside chroot. openlog is done before
	  chroot and drop permissions.
	- config option to set size of aggressive negative cache,
	  neg-cache-size.
	- bug#203 fixed: dlv has been implemented.

26 August 2008: Wouter
	- test for insecure zone when DLV is in use, also does negative cache.
	- test for trustanchor when DLV is in use (the anchor works).
	- test for DLV used for a zone below a trustanchor.
	- added scrub filter for overreaching NSEC records and unit test.
	- iana portlist update